--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,9 @@
 	<description>Proyecto creado en Desarrollo de Aplicaciones Web y Patrones</description>
 	<properties>
 		<java.version>17</java.version>
+                
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -54,13 +56,19 @@
                     <type>module</type>
                 </dependency>
                 <dependency>
+                    <groupId>net.sf.jasperreports</groupId>
+                    <artifactId>jasperreports</artifactId>
+                    <version>6.17.0</version>
+                </dependency>
+<!--                  <dependency>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-starter-security</artifactId>
                 </dependency>   
                 <dependency>
                     <groupId>org.thymeleaf.extras</groupId>
                     <artifactId>thymeleaf-extras-springsecurity5</artifactId>
-                </dependency>
+                </dependency>    
+ -->               
 	</dependencies>
 
 	<build>
@@ -68,6 +76,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                                <version>2.6.3</version>
 				<configuration>
 					<excludes>
 						<exclude>
@@ -77,6 +86,15 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+  <!--                  <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <version>2.6.6</version>
+                        <configuration>
+                            <foo>bar</foo>
+                        </configuration>
+                    </plugin> -->
 		</plugins>
 	</build>
 
